# spendly

./: .env.example  CLAUDE.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 064bdc1f4d29_initial_schema.py  a029f473de6e_add_plaid_items_accounts_transactions_.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: __init__.py  executor.py  prompts.py  tools.py
backend/app/db/: session.py
backend/app/models/: __init__.py  account.py  base.py  chat_message.py  plaid_item.py  profile.py  transaction.py
backend/app/routers/: accounts.py  agent.py  auth.py  plaid.py  transactions.py
backend/app/schemas/: __init__.py  account.py  agent.py  auth.py  common.py  plaid.py  transaction.py
backend/app/services/: account_service.py  agent_service.py  auth_service.py  plaid_service.py  transaction_service.py
backend/tests/: conftest.py  test_auth_service.py  test_plaid_service.py  test_schemas.py  test_transaction_service.py
design/: mockup.html
docs/: PRD.md  ROADMAP.md
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/: providers.tsx
frontend/components/chat/: ChatWindow.tsx  ContextPanel.tsx  MessageBubble.tsx  SuggestedPrompts.tsx
frontend/components/dashboard/: AnalysisReport.tsx  CategoryDonut.tsx  (+3 more)
frontend/constants/: categories.ts
frontend/hooks/: useAuth.ts  useChat.ts  useDashboard.ts  useSettings.ts  useTransactions.ts
frontend/types/: index.ts
(+12 files in other folders)
